<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item type="id" name="w3wAutoSuggestDefaultPicker" />
    <item type="id" name="w3wAutoSuggestDefaultCorrectionPicker"/>
    <item type="id" name="w3wAutoSuggestDefaultErrorMessage"/>
    <item type="id" name="w3wAutoSuggestionTextField"/>
</resources>
